objects/CSS_WS_Parts_In_Promotion__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DLR_Price__c</fullName>
        <description>Price applied to Dealers</description>
        <label>DLR Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DR_Price__c</fullName>
        <description>Price applied to DR</description>
        <label>DR Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Part_Number__c</fullName>
        <label>Long Part Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CSS WS Parts In Promotion</label>
</CustomObject>